--- a/index.html
+++ b/index.html
@@ -60,14 +60,21 @@
 
         <style>
             .urdu-text {
-                background-color: yellow;                
-                font-family: Noto Nastaliq Urdu,serif ;
+                    background-color: yellow;
+                    font-family: Noto Nastaliq Urdu,serif;
+                    width: 100vw;
+                    height: 100vh;
+                    font-size: 3rem;
+                    line-height: 3;
+                    text-align: right;
+                    padding: 10rem;
+
             }
         </style>
         
     </head>
     <body>
-        <div class='urdu-text d-flex align-items-center justify-content-center p-5 m-5'>
+        <div class='urdu-text d-flex align-items-center justify-content-center'>
 
            
 الحمداللہ مجھے امید ہے کے آپ کو یہ کلیکشن پسند آیا ہوگا ، میں لفظوں سے بیاں نھیں کر سکتا کے آپ میرے لئے کتنی عزیز ہے ، اس کلیکشن کو دینے کا مقصد صرف یہ ہے کے جب بھی آپ ان چیزوں سے فائدہ حاصل کریں یا ان چیزوں سے آپ آرام محسوس کریں تو مجھے ضرور یاد کروگے ، انشااللہ آپ مجھے اور بھی چاہنے‌ لگےگی اور اس سے ہمارے بیچ محبت اور بڈےگی ، میں آپ کے لئے اور عزیز بن جاؤں گا 
