--- a/index.html
+++ b/index.html
@@ -75,8 +75,11 @@
     </head>
     <body>
         <div class='urdu-text d-flex align-items-center justify-content-center'>
-
-           
+            <div class='text-center'>
+                بسم الله الرحمن الرحيم
+            </div>
+السلام عليكم
+           <br>
 الحمداللہ مجھے امید ہے کے آپ کو یہ کلیکشن پسند آیا ہوگا ، میں لفظوں سے بیاں نھیں کر سکتا کے آپ میرے لئے کتنی عزیز ہے ، اس کلیکشن کو دینے کا مقصد صرف یہ ہے کے جب بھی آپ ان چیزوں سے فائدہ حاصل کریں یا ان چیزوں سے آپ آرام محسوس کریں تو مجھے ضرور یاد کروگے ، انشااللہ آپ مجھے اور بھی چاہنے‌ لگےگی اور اس سے ہمارے بیچ محبت اور بڈےگی ، میں آپ کے لئے اور عزیز بن جاؤں گا 
 
             
