--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         
     </head>
     <body>
-        <div class='urdu-text d-flex align-items-center justify-content-center'>
+        <div class='urdu-text d-flex align-items-center justify-content-center flex-column'>
             <div class='text-center'>
                 بسم الله الرحمن الرحيم
             </div>
